--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body
 {
     margin: 0;
-    background-color: #181712;
+    background-color: #A27B5C;
     width: 100%;
     height: 2000px;
 }
@@ -15,7 +15,7 @@ header
 
     display: flex;
     flex-direction: row wrap;
-    
+
     background-color: #757571;
 }
 
@@ -48,11 +48,15 @@ main
     flex-flow: row nowrap;
 
     height: 100%;
+
+    margin: 45px 110px;
+
+    background-color: #181712;
 }
 
 #mainText
 {
-    flex: 2 2 auto;
+    flex: 1 1 auto;
 
     color: white;
 
@@ -64,7 +68,7 @@ main
 
 #mainImage
 {
-    flex: 2 2 auto;
+    flex: 1 2 auto;
 
     margin: 8% 3%;
 }
